# kimera-docker

./: .gitignore  Dockerfile  README.md
catkin_ws/: docker-commands.txt  docker-compose.yaml
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/lib/: libgflags.so.2.2  libgflags.so.2.2.1  libgflags_nothreads.so.2.2  libgflags_nothreads.so.2.2.1  libgtsam_unstable.so.4.1.0  libopencv_aruco.so.3.4  libopencv_aruco.so.3.4.2  libopencv_calib3d.so.3.4  libopencv_calib3d.so.3.4.2  libopencv_core.so.3.4  libopencv_core.so.3.4.2  libopencv_features2d.so.3.4  libopencv_features2d.so.3.4.2  libopencv_flann.so.3.4  libopencv_flann.so.3.4.2  libopencv_hfs.so.3.4  libopencv_hfs.so.3.4.2  libopencv_highgui.so.3.4  libopencv_highgui.so.3.4.2  libopencv_img_hash.so.3.4  libopencv_img_hash.so.3.4.2  libopencv_imgcodecs.so.3.4  libopencv_imgcodecs.so.3.4.2  libopencv_imgproc.so.3.4  libopencv_imgproc.so.3.4.2  (+32 more)
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/Kimera-RPGO/: CMakeLists.txt  package.xml
catkin_ws/src/Kimera-RPGO/..git/: config  index  packed-refs
catkin_ws/src/Kimera-RPGO/..git/logs/refs/heads/: master
catkin_ws/src/Kimera-RPGO/..git/objects/pack/: pack-2d4e5c56cea2a6c052bc4e952a71d754400531c7.idx  pack-2d4e5c56cea2a6c052bc4e952a71d754400531c7.pack
catkin_ws/src/Kimera-RPGO/..git/refs/heads/: master
catkin_ws/src/Kimera-RPGO/include/KimeraRPGO/: RobustSolver.h
catkin_ws/src/Kimera-RPGO/src/: RobustSolver.cpp
catkin_ws/src/LIO-SAM/: CMakeLists.txt  package.xml
catkin_ws/src/LIO-SAM/msg/: SLAMRequest.msg  factors.msg
(+828 files in other folders)
